crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__this__closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/this/closure.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method getClosure [(cell this @0)] [None]
         (block
            (fun closure (local @0) [] [Some(0)]
               (block
                  (return (call +0 (attr (cell this @0) toString)))))
            (return (local closure @0))))
      (method toString [(local this @0)] []
         (block
            (return "Foo"))))
   (var closure (global @2) (call +2 (attr (call +2 (global Foo @1)) getClosure)))
   (print (call +3 (global closure @2))))

----- stderr -----
