crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__this__nested_closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/this/nested_closure.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method getClosure [(cell this @0)] [None]
         (block
            (fun f (local @0) [] [Some(0)]
               (block
                  (fun g (local @0) [] [Some(0)]
                     (block
                        (fun h (local @0) [] [Some(0)]
                           (block
                              (return (call +0 (attr (cell this @0) toString)))))
                        (return (local h @0))))
                  (return (local g @0))))
            (return (local f @0))))
      (method toString [(local this @0)] []
         (block
            (return "Foo"))))
   (var closure (global @4) (call +4 (attr (call +4 (global Foo @3)) getClosure)))
   (print (call +5 (call +5 (call +5 (global closure @4))))))

----- stderr -----
